modules/gdscript/tests/scripts/runtime/errors/typed_array_assign_differently_typed.gd
#debug-only: Run-time differently typed container checks are disabled in release

func test():
	var differently: Variant = [1.0] as Array[float]
	var _typed: Array[int] = differently
	print('not ok')
